--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@tailwindcss/vite": "^4.0.6",
+    "autoprefixer": "^10.4.20",
     "firebase": "^10.14.1",
+    "postcss": "^8.5.2",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
