--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^18.1.0",
     "firebase": "^10.14.1",
     "rxjs": "~7.8.0",
+    "tailwind-scrollbar": "^4.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
