--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "chart.js": "^4.4.1",
     "firebase": "^10.14.1",
+    "ng2-charts": "^4.0.1",
     "rxjs": "~7.8.0",
     "tailwind-scrollbar": "^4.0.1",
     "tslib": "^2.3.0",
