--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "piscologia-app": {
+    "psicologia-app": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -11,11 +11,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/piscologia-app",
+            "outputPath": "dist/psicologia-app",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -56,6 +56,8 @@
               ],
               "outputHashing": "all"
             },
+
+            
             "development": {
               "optimization": false,
               "extractLicenses": false,
@@ -65,17 +67,18 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "production": {
-              "buildTarget": "piscologia-app:build:production"
-            },
-            "development": {
-              "buildTarget": "piscologia-app:build:development"
-            }
+        "builder": "@angular-devkit/build-angular:dev-server",
+        "configurations": {
+          "production": {
+            "buildTarget": "psicologia-app:build:production"
           },
-          "defaultConfiguration": "development"
+          "development": {
+            "buildTarget": "psicologia-app:build:development"
+          }
         },
+        "defaultConfiguration": "development"
+      }
+      ,
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
